tests/ui/env_configuration-f-2.stderr
error[E0308]: mismatched types
  --> $DIR/env_configuration-f-2.rs:11:10
   |
11 | #[derive(Configuration, Deserialize, PartialEq)]
   |          ^^^^^^^^^^^^^
   |          |
   |          expected struct `std::string::String`, found `&str`
   |          help: try using a conversion method: `Configuration.to_string()`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
